[CHORE] Fixed description

--- a/src/kpop_spotify_popularity_ml.ipynb
+++ b/src/kpop_spotify_popularity_ml.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# **K-Pop Spotify Popularity Score Forecasting Based on Song Characteristics**\n",
     "\n",
-    "We dive into the fascinating world of music and data analysis to explore the relationship between song characteristics and Spotify popularity scores. With the advent of digital streaming platforms, music has become more accessible than ever before, and Spotify has emerged as one of the leading platforms for discovering and enjoying music. \n",
+    "We delve into the captivating realm of K-pop (Korean Pop) music and its intricate relationship with data analysis. K-pop has experienced an unprecedented global surge in popularity, captivating audiences worldwide with its infectious melodies, captivating choreography, and devoted fandom culture. Understanding the factors that contribute to the success and popularity of K-pop songs is of great importance, not only to fans and enthusiasts but also to industry professionals and artists themselves.\n",
+    "\n",
+    "The rise of digital streaming platforms, such as Spotify, has revolutionized the way people discover and consume music. With K-pop being a global phenomenon, it has gained immense traction on these platforms, attracting a massive fan base from diverse cultural backgrounds. By understanding the key factors that contribute to the popularity of K-pop songs, industry professionals can make informed decisions regarding artist promotions, marketing strategies, and even song production.\n",
     "\n",
     "First, we will perform Exploratory Data Analysis (EDA) to gain a deeper understanding of our dataset. By visualizing and analyzing the relationships between various song features and the corresponding popularity scores, we will uncover any existing trends or correlations that could serve as valuable predictors.\n",
     "\n",
@@ -18,7 +20,7 @@
     "4. Are there any outliers or unusual data points in terms of song characteristics or popularity scores? What might be the reasons behind these outliers?\n",
     "5. Are there any temporal trends in Spotify popularity scores? Do certain periods or years show higher or lower average popularity scores?\n",
     "\n",
-    "Once we have a solid grasp of our data, we will then train and evaluate a machine learning model. Leveraging popular algorithms such as regression or classification models, we will feed our dataset into the model and tune its parameters to optimize performance. Our aim is to create a reliable predictive model that can accurately estimate the popularity score of a song, allowing us to gain insights into what makes a track resonate with listeners on Spotify."
+    "Once we have a solid grasp of our data, we will then train and evaluate a machine learning model. Leveraging popular algorithms such as regression or classification models, we will feed our dataset into the model and tune its parameters to optimize performance. Our aim is to create a reliable predictive model that can accurately estimate the popularity score of a song, allowing us to gain insights into what makes a track resonate with K-pop listeners on Spotify."
    ]
   },
   {
@@ -304,182 +306,192 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
-       "      <td>20004.000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>20004.000000</td>\n",
+       "      <td>2.000400e+04</td>\n",
+       "      <td>20004.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>27.736</td>\n",
-       "      <td>2011.487</td>\n",
-       "      <td>0.622</td>\n",
-       "      <td>0.685</td>\n",
-       "      <td>5.328</td>\n",
-       "      <td>-6.020</td>\n",
-       "      <td>0.591</td>\n",
-       "      <td>0.080</td>\n",
-       "      <td>0.295</td>\n",
-       "      <td>0.024</td>\n",
-       "      <td>0.197</td>\n",
-       "      <td>0.551</td>\n",
-       "      <td>120.565</td>\n",
-       "      <td>238646.271</td>\n",
-       "      <td>3.943</td>\n",
+       "      <td>27.736203</td>\n",
+       "      <td>2011.486953</td>\n",
+       "      <td>0.621855</td>\n",
+       "      <td>0.685330</td>\n",
+       "      <td>5.328084</td>\n",
+       "      <td>-6.020132</td>\n",
+       "      <td>0.590782</td>\n",
+       "      <td>0.079998</td>\n",
+       "      <td>0.294697</td>\n",
+       "      <td>0.024031</td>\n",
+       "      <td>0.196951</td>\n",
+       "      <td>0.550745</td>\n",
+       "      <td>120.564545</td>\n",
+       "      <td>2.386463e+05</td>\n",
+       "      <td>3.943111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>16.622</td>\n",
-       "      <td>6.951</td>\n",
-       "      <td>0.139</td>\n",
-       "      <td>0.200</td>\n",
-       "      <td>3.563</td>\n",
-       "      <td>3.069</td>\n",
-       "      <td>0.492</td>\n",
-       "      <td>0.082</td>\n",
-       "      <td>0.276</td>\n",
-       "      <td>0.121</td>\n",
-       "      <td>0.158</td>\n",
-       "      <td>0.234</td>\n",
-       "      <td>27.907</td>\n",
-       "      <td>126413.575</td>\n",
-       "      <td>0.323</td>\n",
+       "      <td>16.622392</td>\n",
+       "      <td>6.950592</td>\n",
+       "      <td>0.138580</td>\n",
+       "      <td>0.199869</td>\n",
+       "      <td>3.563437</td>\n",
+       "      <td>3.068904</td>\n",
+       "      <td>0.491702</td>\n",
+       "      <td>0.082261</td>\n",
+       "      <td>0.276232</td>\n",
+       "      <td>0.121302</td>\n",
+       "      <td>0.157707</td>\n",
+       "      <td>0.233916</td>\n",
+       "      <td>27.906867</td>\n",
+       "      <td>1.264136e+05</td>\n",
+       "      <td>0.323183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.000</td>\n",
-       "      <td>2000.000</td>\n",
-       "      <td>0.102</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>-27.274</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.022</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.011</td>\n",
-       "      <td>0.033</td>\n",
-       "      <td>43.223</td>\n",
-       "      <td>22040.000</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2000.000000</td>\n",
+       "      <td>0.102000</td>\n",
+       "      <td>0.000270</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-27.274000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.022000</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.011300</td>\n",
+       "      <td>0.033400</td>\n",
+       "      <td>43.223000</td>\n",
+       "      <td>2.204000e+04</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>14.000</td>\n",
-       "      <td>2005.000</td>\n",
-       "      <td>0.532</td>\n",
-       "      <td>0.541</td>\n",
-       "      <td>2.000</td>\n",
-       "      <td>-7.509</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.034</td>\n",
-       "      <td>0.052</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.096</td>\n",
-       "      <td>0.363</td>\n",
-       "      <td>99.912</td>\n",
-       "      <td>199586.750</td>\n",
-       "      <td>4.000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>2005.000000</td>\n",
+       "      <td>0.532000</td>\n",
+       "      <td>0.541000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>-7.509250</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.034400</td>\n",
+       "      <td>0.052500</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.096300</td>\n",
+       "      <td>0.363000</td>\n",
+       "      <td>99.911750</td>\n",
+       "      <td>1.995868e+05</td>\n",
+       "      <td>4.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>27.000</td>\n",
-       "      <td>2012.000</td>\n",
-       "      <td>0.640</td>\n",
-       "      <td>0.719</td>\n",
-       "      <td>5.000</td>\n",
-       "      <td>-5.430</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.048</td>\n",
-       "      <td>0.199</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.134</td>\n",
-       "      <td>0.562</td>\n",
-       "      <td>119.987</td>\n",
-       "      <td>223493.000</td>\n",
-       "      <td>4.000</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>2012.000000</td>\n",
+       "      <td>0.640000</td>\n",
+       "      <td>0.719000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>-5.430500</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.048500</td>\n",
+       "      <td>0.199000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.134000</td>\n",
+       "      <td>0.562000</td>\n",
+       "      <td>119.987000</td>\n",
+       "      <td>2.234930e+05</td>\n",
+       "      <td>4.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>40.000</td>\n",
-       "      <td>2018.000</td>\n",
-       "      <td>0.724</td>\n",
-       "      <td>0.852</td>\n",
-       "      <td>8.000</td>\n",
-       "      <td>-3.877</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.088</td>\n",
-       "      <td>0.500</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.265</td>\n",
-       "      <td>0.740</td>\n",
-       "      <td>136.575</td>\n",
-       "      <td>258628.000</td>\n",
-       "      <td>4.000</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>2018.000000</td>\n",
+       "      <td>0.724000</td>\n",
+       "      <td>0.852000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>-3.876750</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.087700</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.000033</td>\n",
+       "      <td>0.265000</td>\n",
+       "      <td>0.740000</td>\n",
+       "      <td>136.575000</td>\n",
+       "      <td>2.586280e+05</td>\n",
+       "      <td>4.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>92.000</td>\n",
-       "      <td>2023.000</td>\n",
-       "      <td>0.968</td>\n",
-       "      <td>0.999</td>\n",
-       "      <td>11.000</td>\n",
-       "      <td>1.220</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.950</td>\n",
-       "      <td>0.996</td>\n",
-       "      <td>0.988</td>\n",
-       "      <td>0.986</td>\n",
-       "      <td>0.990</td>\n",
-       "      <td>229.829</td>\n",
-       "      <td>4051696.000</td>\n",
-       "      <td>5.000</td>\n",
+       "      <td>92.000000</td>\n",
+       "      <td>2023.000000</td>\n",
+       "      <td>0.968000</td>\n",
+       "      <td>0.999000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>1.220000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.950000</td>\n",
+       "      <td>0.996000</td>\n",
+       "      <td>0.988000</td>\n",
+       "      <td>0.986000</td>\n",
+       "      <td>0.990000</td>\n",
+       "      <td>229.829000</td>\n",
+       "      <td>4.051696e+06</td>\n",
+       "      <td>5.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       popularity       year  danceability     energy        key   loudness  \\\n",
-       "count   20004.000  20004.000     20004.000  20004.000  20004.000  20004.000   \n",
-       "mean       27.736   2011.487         0.622      0.685      5.328     -6.020   \n",
-       "std        16.622      6.951         0.139      0.200      3.563      3.069   \n",
-       "min         0.000   2000.000         0.102      0.000      0.000    -27.274   \n",
-       "25%        14.000   2005.000         0.532      0.541      2.000     -7.509   \n",
-       "50%        27.000   2012.000         0.640      0.719      5.000     -5.430   \n",
-       "75%        40.000   2018.000         0.724      0.852      8.000     -3.877   \n",
-       "max        92.000   2023.000         0.968      0.999     11.000      1.220   \n",
+       "         popularity          year  danceability        energy           key  \\\n",
+       "count  20004.000000  20004.000000  20004.000000  20004.000000  20004.000000   \n",
+       "mean      27.736203   2011.486953      0.621855      0.685330      5.328084   \n",
+       "std       16.622392      6.950592      0.138580      0.199869      3.563437   \n",
+       "min        0.000000   2000.000000      0.102000      0.000270      0.000000   \n",
+       "25%       14.000000   2005.000000      0.532000      0.541000      2.000000   \n",
+       "50%       27.000000   2012.000000      0.640000      0.719000      5.000000   \n",
+       "75%       40.000000   2018.000000      0.724000      0.852000      8.000000   \n",
+       "max       92.000000   2023.000000      0.968000      0.999000     11.000000   \n",
        "\n",
-       "            mode  speechiness  acousticness  instrumentalness   liveness  \\\n",
-       "count  20004.000    20004.000     20004.000         20004.000  20004.000   \n",
-       "mean       0.591        0.080         0.295             0.024      0.197   \n",
-       "std        0.492        0.082         0.276             0.121      0.158   \n",
-       "min        0.000        0.022         0.000             0.000      0.011   \n",
-       "25%        0.000        0.034         0.052             0.000      0.096   \n",
-       "50%        1.000        0.048         0.199             0.000      0.134   \n",
-       "75%        1.000        0.088         0.500             0.000      0.265   \n",
-       "max        1.000        0.950         0.996             0.988      0.986   \n",
+       "           loudness          mode   speechiness  acousticness  \\\n",
+       "count  20004.000000  20004.000000  20004.000000  20004.000000   \n",
+       "mean      -6.020132      0.590782      0.079998      0.294697   \n",
+       "std        3.068904      0.491702      0.082261      0.276232   \n",
+       "min      -27.274000      0.000000      0.022000      0.000002   \n",
+       "25%       -7.509250      0.000000      0.034400      0.052500   \n",
+       "50%       -5.430500      1.000000      0.048500      0.199000   \n",
+       "75%       -3.876750      1.000000      0.087700      0.500000   \n",
+       "max        1.220000      1.000000      0.950000      0.996000   \n",
        "\n",
-       "         valence      tempo  duration_ms  time_signature  \n",
-       "count  20004.000  20004.000    20004.000       20004.000  \n",
-       "mean       0.551    120.565   238646.271           3.943  \n",
-       "std        0.234     27.907   126413.575           0.323  \n",
-       "min        0.033     43.223    22040.000           0.000  \n",
-       "25%        0.363     99.912   199586.750           4.000  \n",
-       "50%        0.562    119.987   223493.000           4.000  \n",
-       "75%        0.740    136.575   258628.000           4.000  \n",
-       "max        0.990    229.829  4051696.000           5.000  "
+       "       instrumentalness      liveness       valence         tempo  \\\n",
+       "count      20004.000000  20004.000000  20004.000000  20004.000000   \n",
+       "mean           0.024031      0.196951      0.550745    120.564545   \n",
+       "std            0.121302      0.157707      0.233916     27.906867   \n",
+       "min            0.000000      0.011300      0.033400     43.223000   \n",
+       "25%            0.000000      0.096300      0.363000     99.911750   \n",
+       "50%            0.000000      0.134000      0.562000    119.987000   \n",
+       "75%            0.000033      0.265000      0.740000    136.575000   \n",
+       "max            0.988000      0.986000      0.990000    229.829000   \n",
+       "\n",
+       "        duration_ms  time_signature  \n",
+       "count  2.000400e+04    20004.000000  \n",
+       "mean   2.386463e+05        3.943111  \n",
+       "std    1.264136e+05        0.323183  \n",
+       "min    2.204000e+04        0.000000  \n",
+       "25%    1.995868e+05        4.000000  \n",
+       "50%    2.234930e+05        4.000000  \n",
+       "75%    2.586280e+05        4.000000  \n",
+       "max    4.051696e+06        5.000000  "
       ]
      },
      "execution_count": 3,
@@ -488,7 +500,7 @@
     }
    ],
    "source": [
-    "kpop_df.describe().round(3)"
+    "kpop_df.describe()"
    ]
   },
   {
