[FEAT] Dropped index cols from original dataset

--- a/src/kpop_spotify_popularity_ml.ipynb
+++ b/src/kpop_spotify_popularity_ml.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,6 +82,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>artist_name</th>\n",
        "      <th>track_name</th>\n",
        "      <th>track_id</th>\n",
@@ -105,7 +106,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>35488</th>\n",
+       "      <th>0</th>\n",
+       "      <td>35488</td>\n",
        "      <td>Block B</td>\n",
        "      <td>닐리리맘보</td>\n",
        "      <td>4fZYGHiRcKxwVSnF498uaE</td>\n",
@@ -127,7 +129,8 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35489</th>\n",
+       "      <th>1</th>\n",
+       "      <td>35489</td>\n",
        "      <td>Block B</td>\n",
        "      <td>난리나</td>\n",
        "      <td>7dgO6H1BxXeXfxDkiDN8E9</td>\n",
@@ -149,7 +152,8 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35490</th>\n",
+       "      <th>2</th>\n",
+       "      <td>35490</td>\n",
        "      <td>SHINee</td>\n",
        "      <td>Sherlock (Clue + Note)</td>\n",
        "      <td>2sVtrcj32v3fR8mLjqWziv</td>\n",
@@ -171,7 +175,8 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35491</th>\n",
+       "      <th>3</th>\n",
+       "      <td>35491</td>\n",
        "      <td>G-DRAGON</td>\n",
        "      <td>Without You (Feat. ROSE)</td>\n",
        "      <td>3V375E3xldRPEEcIKiw83l</td>\n",
@@ -193,7 +198,8 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35492</th>\n",
+       "      <th>4</th>\n",
+       "      <td>35492</td>\n",
        "      <td>J Boog</td>\n",
        "      <td>See Her Again</td>\n",
        "      <td>3Ibxs1OxL9wH3jBwpIQGid</td>\n",
@@ -219,36 +225,36 @@
        "</div>"
       ],
       "text/plain": [
-       "      artist_name                track_name                track_id  \\\n",
-       "35488     Block B                     닐리리맘보  4fZYGHiRcKxwVSnF498uaE   \n",
-       "35489     Block B                       난리나  7dgO6H1BxXeXfxDkiDN8E9   \n",
-       "35490      SHINee    Sherlock (Clue + Note)  2sVtrcj32v3fR8mLjqWziv   \n",
-       "35491    G-DRAGON  Without You (Feat. ROSE)  3V375E3xldRPEEcIKiw83l   \n",
-       "35492      J Boog             See Her Again  3Ibxs1OxL9wH3jBwpIQGid   \n",
+       "   Unnamed: 0 artist_name                track_name                track_id  \\\n",
+       "0       35488     Block B                     닐리리맘보  4fZYGHiRcKxwVSnF498uaE   \n",
+       "1       35489     Block B                       난리나  7dgO6H1BxXeXfxDkiDN8E9   \n",
+       "2       35490      SHINee    Sherlock (Clue + Note)  2sVtrcj32v3fR8mLjqWziv   \n",
+       "3       35491    G-DRAGON  Without You (Feat. ROSE)  3V375E3xldRPEEcIKiw83l   \n",
+       "4       35492      J Boog             See Her Again  3Ibxs1OxL9wH3jBwpIQGid   \n",
        "\n",
-       "       popularity  year  genre  danceability  energy  key  loudness  mode  \\\n",
-       "35488          59  2012  k-pop         0.756   0.837    2    -2.711     0   \n",
-       "35489          55  2012  k-pop         0.780   0.956    8    -3.690     1   \n",
-       "35490          54  2012  k-pop         0.640   0.937    1    -2.112     1   \n",
-       "35491          61  2012  k-pop         0.600   0.678   11    -6.894     1   \n",
-       "35492          47  2012  k-pop         0.734   0.502    2    -6.792     1   \n",
+       "   popularity  year  genre  danceability  energy  key  loudness  mode  \\\n",
+       "0          59  2012  k-pop         0.756   0.837    2    -2.711     0   \n",
+       "1          55  2012  k-pop         0.780   0.956    8    -3.690     1   \n",
+       "2          54  2012  k-pop         0.640   0.937    1    -2.112     1   \n",
+       "3          61  2012  k-pop         0.600   0.678   11    -6.894     1   \n",
+       "4          47  2012  k-pop         0.734   0.502    2    -6.792     1   \n",
        "\n",
-       "       speechiness  acousticness  instrumentalness  liveness  valence  \\\n",
-       "35488       0.0524        0.0131               0.0    0.0943    0.537   \n",
-       "35489       0.0882        0.0523               0.0    0.0675    0.921   \n",
-       "35490       0.0839        0.0069               0.0    0.3930    0.316   \n",
-       "35491       0.0372        0.0311               0.0    0.3380    0.326   \n",
-       "35492       0.0484        0.7680               0.0    0.0584    0.936   \n",
+       "   speechiness  acousticness  instrumentalness  liveness  valence    tempo  \\\n",
+       "0       0.0524        0.0131               0.0    0.0943    0.537  109.937   \n",
+       "1       0.0882        0.0523               0.0    0.0675    0.921  114.971   \n",
+       "2       0.0839        0.0069               0.0    0.3930    0.316  107.013   \n",
+       "3       0.0372        0.0311               0.0    0.3380    0.326  123.991   \n",
+       "4       0.0484        0.7680               0.0    0.0584    0.936   62.023   \n",
        "\n",
-       "         tempo  duration_ms  time_signature  \n",
-       "35488  109.937       205280               4  \n",
-       "35489  114.971       202606               4  \n",
-       "35490  107.013       239187               4  \n",
-       "35491  123.991       242677               4  \n",
-       "35492   62.023       189677               4  "
+       "   duration_ms  time_signature  \n",
+       "0       205280               4  \n",
+       "1       202606               4  \n",
+       "2       239187               4  \n",
+       "3       242677               4  \n",
+       "4       189677               4  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +262,8 @@
    "source": [
     "# Preview the first 5 rows of the dataset\n",
     "\n",
-    "kpop_df = pd.read_csv(\"../data/kpop_spotify_data.csv\", index_col=0)\n",
+    "kpop_df = pd.read_csv(\"../data/kpop_spotify_data.csv\")\n",
+    "kpop_df.drop(columns=kpop_df.columns[0], axis=1, inplace=True)\n",
     "kpop_df.head()"
    ]
   },
